# esp32c6-probe

./: .gitignore  Cargo.toml  README.md  partitions.csv
.cargo/: config.toml
