[package]
edition = "2021"
name    = "esp32c6-probe"
version = "0.1.0"

[[bin]]
name = "esp32c6-probe"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal                = { version = "=1.0.0-beta.1", features = ["esp32c6", "unstable"] }

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.4.0"
esp-hal-embassy = { version = "0.8.1", features = ["esp32c6"] }
esp-println = { version = "0.14.0", features = ["esp32c6"] }
esp-backtrace = { version = "0.16.0", features = ["esp32c6", "exception-handler", "panic-handler", "println"] }
esp-wifi = { version = "0.14.1", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "wifi",
] }
# Use my own fork where humidity can be fetched
hdc302x = { git = "https://github.com/eest/hdc302x-rs", rev = "9153700ff8d9cc6fe0c115314e2547a4f720c915" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
heapless = "0.8.0"
rust-mqtt = { version = "0.3.0", default-features = false }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[patch.crates-io]
hdc302x-async = { path = "/Users/patrik/git/hdc302x-rs" }
